[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1")

[node name="HUDContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="HUDContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="HUDContainer/VBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="FaithLabel" type="Label" parent="HUDContainer/VBox/TopRow"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "FAITH: 0%"

[node name="FaithBar" type="ProgressBar" parent="HUDContainer/VBox/TopRow"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
mouse_filter = 2
max_value = 100.0
value = 0.0
show_percentage = false

[node name="Spacer" type="Control" parent="HUDContainer/VBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 3

[node name="DialoguePanel" type="PanelContainer" parent="HUDContainer/VBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 8
custom_minimum_size = Vector2(0, 80)

[node name="DialogueMargin" type="MarginContainer" parent="HUDContainer/VBox/DialoguePanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="DialogueVBox" type="VBoxContainer" parent="HUDContainer/VBox/DialoguePanel/DialogueMargin"]
layout_mode = 2
mouse_filter = 2

[node name="SpeakerLabel" type="Label" parent="HUDContainer/VBox/DialoguePanel/DialogueMargin/DialogueVBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
text = "TANK:"

[node name="DialogueText" type="RichTextLabel" parent="HUDContainer/VBox/DialoguePanel/DialogueMargin/DialogueVBox"]
layout_mode = 2
mouse_filter = 2
size_flags_vertical = 3
bbcode_enabled = true
theme_override_colors/default_color = Color(0, 0.85, 0, 1)
